--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
            
             <li class="mb-3"><a href="mailto:info@mydomain.com" class="d-flex"><span class="mt-1 icon-envelope mr-2"></span><span>jincan1994@foxmail.com</span></a></li>
 
-            <li class="mb-3"><a href="https://Colorlib/" target="_blank" class="d-flex"><span class="mt-1 icon-globe mr-2"></span><span>https://CanJin1994.github.io/index</span></a></li>
+            <li class="mb-3"><a href="https://canjin1994.github.io/index" target="_blank" class="d-flex"><span class="mt-1 icon-globe mr-2"></span><span>https://canjin1994.github.io/index</span></a></li>
           </ul>
         </div> <!-- /.col-lg-4 -->
       </div> <!-- /.row -->
