--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="container">
       <div class="row mb-5 align-items-center">
         <div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="0">
-          <div class="img-wrap">
+          <div>
             <img src="images/image_1_long.jpg" alt="Image placeholder" class="img-fluid">
           </div>
           
