--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <li data-filter=".photography">摄影</li>
           <li data-filter=".food">美食</li>
           <li data-filter=".live">生活</li>
-          <li data-filter=".else">其他</li>
+         <!-- <li data-filter=".else">其他</li> -->
         </ul>
       </div>
 
@@ -197,7 +197,7 @@
             <a href="images/pg2.jpg" data-fancybox="gal">
               <img src="images/pg2.jpg" alt="Image" class="img-fluid">
               <div class="contents">
-                <h3>大鹏展翅</h3>
+                <h3>鹰击长空</h3>
                 <div class="cat">武义</div>
               </div>
             </a>
@@ -206,7 +206,7 @@
             <a href="images/pg1.jpg" data-fancybox="gal">
               <img src="images/pg1.jpg" alt="Image" class="img-fluid">
               <div class="contents">
-                <h3>自然</h3>
+                <h3>出尘</h3>
                 <div class="cat">丽江·泸沽湖</div>
               </div>
             </a>
@@ -234,7 +234,7 @@
             <a href="images/pg5.jpg" data-fancybox="gal">
               <img src="images/pg5.jpg" alt="Image" class="img-fluid">
               <div class="contents">
-                <h3>冬组图一</h3>
+                <h3>冬·组图一</h3>
                 <div class="cat">武义·璟园</div>
               </div>
             </a>
@@ -243,7 +243,7 @@
             <a href="images/pg6.jpg" data-fancybox="gal">
               <img src="images/pg6.jpg" alt="Image" class="img-fluid">
               <div class="contents">
-                <h3>冬组图二</h3>
+                <h3>冬·组图二</h3>
                 <div class="cat">武义·璟园</div>
               </div>
             </a>
@@ -261,7 +261,7 @@
             <a href="images/pg7.jpg" data-fancybox="gal">
               <img src="images/pg7.jpg" alt="Image" class="img-fluid">
               <div class="contents">
-                <h3>冬组图三</h3>
+                <h3>冬·组图三</h3>
                 <div class="cat">武义·璟园</div>
               </div>
             </a>
@@ -270,7 +270,7 @@
             <a href="images/pg8.jpg" data-fancybox="gal">
               <img src="images/pg8.jpg" alt="Image" class="img-fluid">
               <div class="contents">
-                <h3>冬组图四</h3>
+                <h3>冬·组图四</h3>
                 <div class="cat">武义·璟园</div>
               </div>
             </a>
@@ -784,7 +784,7 @@
         -->
         </div> <!-- /.col-lg-7 -->
         <div class="col-lg-4 ml-auto"  data-aos="fade-up" data-aos-delay="200">
-          <h3 class="h5 mb-4">Email</h3>
+          <h3 class="h5 mb-4">联系方式</h3>
           <address class="text-black d-flex"><span class="mt-1 icon-room mr-2"></span><span>中国 浙江省 金华市 武义县 ******</span></address>
           <ul class="list-unstyled ul-links mb-4">
             <li class="mb-3"><a href="tel://11234567890" class="d-flex"><span class="mt-1 icon-phone mr-2"></span><span>+86 152****5566</span></a></li>
