--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
       <div class="row">
         <div class="col-md-12 mb-5" data-aos="fade-up" data-aos-delay="0">
           <div class="section-heading text-center">
-            <h2>联系我</h2>
+            <h2>Contact</h2>
           </div>
         </div>
       </div>
@@ -784,7 +784,7 @@
         -->
         </div> <!-- /.col-lg-7 -->
         <div class="col-lg-4 ml-auto"  data-aos="fade-up" data-aos-delay="200">
-          <h3 class="h5 mb-4">联系方式</h3>
+          <h3 class="h5 mb-4"></br></h3>
           <address class="text-black d-flex"><span class="mt-1 icon-room mr-2"></span><span>中国 浙江省 金华市 武义县 ******</span></address>
           <ul class="list-unstyled ul-links mb-4">
             <li class="mb-3"><a href="tel://11234567890" class="d-flex"><span class="mt-1 icon-phone mr-2"></span><span>+86 152****5566</span></a></li>
@@ -806,6 +806,7 @@
       <div class="row mt-5">
         <div class="col-12 text-center">
           <p>
+          </br>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 Copyright &copy;<script>document.write(new Date().getFullYear());</script> Open Source <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://github.com/CanJin1994" target="_blank" >Can Jin</a>
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
